# CellLayerShapes

./: CMakeLists.txt  README.md  modules.md
docs/: ARCHITECTURE.md  PROJECT_STRUCTURE.md
include/fluxcae/: fluxcae.h
include/fluxcae/domain/layout/: Cell.h  Component.h  Drill.h  Instance.h  Layer.h  LayerStack.h  Layout.h  Material.h  Net.h  Netlist.h  Pin.h  Shape.h  SpatialIndex.h  StackupLayer.h  Via.h
include/fluxcae/foundation/math/: Box.h  Point.h  Polygon.h  Transform.h
include/fluxcae/foundation/memory/: MemoryPool.h
include/fluxcae/foundation/utils/: Config.h  IDGenerator.h  Logger.h
include/fluxcae/service/: GDSReader.h  GDSWriter.h  ISerializer.h  OASISReader.h  OASISWriter.h  PluginManager.h
include/fluxcae/service/plugin/: IPlugin.h
include/fluxcae/service/transaction/: Command.h
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  Cell.cpp  Command.cpp  Component.cpp  Drill.cpp  Layer.cpp  LayerStack.cpp  Layout.cpp  Logger.cpp  Material.cpp  MemoryPool.cpp  Net.cpp  Netlist.cpp  Pin.cpp  PluginManager.cpp  Shape.cpp  SpatialIndex.cpp  StackupLayer.cpp  Via.cpp
tests/: CMakeLists.txt  test_basic.cpp
